Bug 429578 - Could not synchronize with the database
Summary: Could not synchronize with the database
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-24 06:36 UTC by Dmitrii Utkin
Modified: 2020-11-24 09:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Startup log copied from terminal (248.54 KB, text/x-log)
2020-11-24 06:36 UTC, Dmitrii Utkin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitrii Utkin 2020-11-24 06:36:38 UTC
Created attachment 133599 [details]
Startup log copied from terminal

SUMMARY

014f3d4 version complains about broken DB after every launch. This error appeared in earlier 5.0 versions but only after crash.

Sometimes it's working between restarts, but in most cases the error "Could not synchronize with the database" appears.


STEPS TO REPRODUCE
1. start Krita
2. close Krita
3. start Krita again


OBSERVED RESULT

Could not synchronize /home/dem/.local/share/krita/ with the database
Krita will quit now.


EXPECTED RESULT

DB synch is working.


SOFTWARE/OS VERSIONS

Linux Ubuntu: 20.04


For details please see log and video attached
Comment 1 Dmitrii Utkin 2020-11-24 06:40:23 UTC
Screencast with the error (you may need to download it, if it doesn't play):

https://drive.google.com/file/d/1eGsUoYc-ExXRIW4MaWC0wcTeR1x3Lho8/view
Comment 2 Halla Rempt 2020-11-24 09:06:54 UTC
Git commit 4eb95774019fdbf091a17725637ef4fdde52d22b by Boudewijn Rempt.
Committed on 24/11/2020 at 09:06.
Pushed by rempt into branch 'master'.

Add a fallback name for resources that have no name

M  +1    -0    libs/resources/KoResource.cpp

https://invent.kde.org/graphics/krita/commit/4eb95774019fdbf091a17725637ef4fdde52d22b