Add a fallback name for resources that have no name

BUG:429578