libs/resources/KoResource.cpp
@@ -47,6 +47,7 @@ KoResource::KoResource(const QString& filename)
     : d(new Private)
 {
     d->filename = filename;
+    d->name = QFileInfo(filename).baseName().replace('_', ' ');
 }
 
 KoResource::~KoResource()
